# plant_d

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  main.py  plant_diease_predction.h5  pyproject.toml  requirements.txt  setup.py
